--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.1.5",
     "class-variance-authority": "^0.7.0",
+    "framer-motion": "^11.11.11",
     "next": "^14.2.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
